feat: filter chart history